--- a/css/styles.css
+++ b/css/styles.css
@@ -2,33 +2,48 @@ header{
     padding: 50px; 
     background-color: brown;  
     color: white;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
    
-   }
-   
-   img{
+img{
     height: 100px;
     width: 200px;
-    
 }
 
-   #products{
+#products{
     background-color: darkgoldenrod;
- 
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
-h2{
+
+ h2{
     background-color: white;
 }
+
 footer{
     background-color: black;
     color: white;
     padding: 50px;
     margin-top: 10px;
-
-   
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
+
 button{
     background-color: green;
     color: white;
+}
+
+h1 {
+    text-align: center;
+}
+
+li {
+    display: inline;  
+}
+
+ul{
+    text-align: center;
 }
 
 
